Fixing buttons alignment on forms related to #33

--- a/styles.css
+++ b/styles.css
@@ -4157,7 +4157,7 @@ label {
   top: 5px;
 }
 
-.form-add-series button[type="submit"] {
+.button-block {
   margin: 25px 0;
 }
 
