--- a/styles/layout/_addcomics.scss
+++ b/styles/layout/_addcomics.scss
@@ -140,6 +140,6 @@
   }
 }
 
-.form-add-series button[type="submit"] {
+.button-block {
   margin: 25px 0;
 }
